# metaqore

./: .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  DEPLOYMENT_GUIDE.md  Dockerfile  MONOREPO_README.md  README.md  docker-compose.prod.yml  docker-compose.services.yml  docker-compose.yml  main.py  nx.json  pyproject.toml  pytest.ini  requirements.txt  session_logger.md  test_berta.py
.github/: copilot-instructions.md
config/: llm_providers.yaml
metaqore/: config.py  exceptions.py  logger.py
metaqore/api/: __init__.py  app.py  middleware.py
metaqore/api/routes/: __init__.py  (+9 more)
metaqore/core/: __init__.py  audit.py  berta_orchestrator.py  models.py  orchestrator.py  psmp.py  security.py  state_manager.py
metaqore/gateway/: README.md  __init__.py  engine.py  queue.py  worker.py
metaqore/hmcp/: __init__.py  config_loader.py  orchestrator.py  policy.py  psmp_client.py  service.py  skill_manager.py  training.py  validation_gate.py  workflow.py
metaqore/llm/: bootstrap.py
metaqore/metrics/: aggregator.py  exporter.py
metaqore/mock_llm/: __init__.py  client.py
metaqore/storage/: backend.py
metaqore/streaming/: __init__.py  webhook_dispatcher.py  websocket_manager.py
tests/: conftest.py  metaqore_testsuite.py
tests/integration/: test_hmcp_api.py  test_streaming_integration.py
tests/unit/: test_api_app.py  test_api_artifacts.py  test_api_governance.py  test_api_projects.py  test_api_tasks.py  test_gateway.py  test_llm_adapters.py  test_models.py  test_psmp.py  test_security.py  test_state_manager.py  test_storage_sqlite.py  test_streaming_unit.py
(+12 files in other folders)
